bessere Banner Position

--- a/Mockup.html
+++ b/Mockup.html
@@ -75,7 +75,7 @@
                 </li>
             </ul>
         </div>
-        <img id="banner" src="images/spp.svg">
+        <div id="banner"></div>
         <div id="navbar" class="collapse navbar-collapse">
             <div id="logo"></div>
             <ul class="nav navbar-nav">
