bessere Banner Position

--- a/Mockup.html
+++ b/Mockup.html
@@ -151,8 +151,7 @@
         <div id="content" class="col-sm-9">
             <div id="c184" class="csc-default">
                 <!--  Header: [begin] -->
-                <h1 class="csc-firstHeader"></h1>
-                <h1>DFG SPP1593: Design For Future - Managed Software Evolution</h1>
+                <h1 class="csc-firstHeader">DFG SPP1593: Design For Future - Managed Software Evolution</h1>
                 <!--  Header: [end] -->
             </div>
             <div id="c179" class="csc-default"><p>The&nbsp;<b>DFG&nbsp;Priority Programme&nbsp;1593&nbsp;</b>(SPP1593)
@@ -180,7 +179,7 @@
                                         <tbody>
                                         <tr>
                                             <td><img src="images/csm_sppspring_68c616b689.png"
-                                                     width="600" height="370" alt="" border="0"></td>
+                                                     width="600" height="370" alt=""></td>
                                         </tr>
                                         </tbody>
                                     </table>
