--- a/Mockup.html
+++ b/Mockup.html
@@ -72,7 +72,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <div id="logo"></div>
             <ul class="nav navbar-nav">
-                <!--###BEGIN_MENU###-->
+                <!--###BEGIN_MENU###--><!--test-->
                 <li class="main_act"><a href="Mockup_Home.html">Home</a></li>
                 <li><a href="Mockup_Persons.html">Persons</a></li>
                 <li><a href="Mockup_RS.html">Research Structure</a></li>
