--- a/Mockup_CS.html
+++ b/Mockup_CS.html
@@ -129,7 +129,7 @@
             <div id="c761" class="csc-default">
                 <!--  Media element: [begin] -->
 
-                <video src="assets/CoCoMe-web.mp4" controls>
+                <video src="http://gitlab.ips.cs.tu-bs.de/typo3_6.2/fileadmin/casestudies/CoCoMe-web.mp4" controls>
                     Ihr Browser kann dieses Video nicht wiedergeben.<br/>
                     Dieser Film zeigt eine Demonstration des video-Elements.
                     Sie können ihn unter abrufen.
