Bild nun zentriert

--- a/Mockup_CS.html
+++ b/Mockup_CS.html
@@ -304,8 +304,8 @@
             </div>
             <div id="c763" class="csc-default">
                 <div class="csc-textpic csc-textpic-center csc-textpic-above csc-textpic-caption-c">
-                    <div class="csc-textpic-imagewrap" style="width:500px;">
-                        <dl class="csc-textpic-image csc-textpic-firstcol csc-textpic-lastcol" style="width:500px;">
+                    <div class="csc-textpic-imagewrap">
+                        <dl class="csc-textpic-image csc-textpic-firstcol csc-textpic-lastcol">
                             <dt><img src="assets/csm_ppu_4f05fe19aa.png" width="500" height="252"
                                      border="0" alt=""></dt>
                             <dd class="csc-textpic-caption">Pick and Place Unit (image source: www.ais.mw.tum.de)</dd>
